# vsg

./: .gitignore  LICENSE  vsm.service  vsm.sh
.github/workflows/: deploy.yml  publish.yml  release.yml
crates/generator/: Cargo.toml
crates/generator/src/: cache.rs  content.rs  main.rs  template_repository.rs
crates/vsm/: Cargo.toml
crates/vsm/src/: analytics.rs  database.rs  helper.rs  main.rs  static_files.rs  static_sites.rs
crates/vsm/src/api/: mod.rs
crates/vsm/src/api/admin/: deploy.rs  mod.rs
crates/vsm_generator/: Cargo.toml
crates/vsm_generator/src/: content.rs  main.rs  static_files.rs  template.rs  template_repository.rs
crates/vsm_generator/src/content/: content_variables.rs  markdown.rs  preliminary_analysis.rs  word_counter.rs
crates/vsm_updater/: Cargo.toml
crates/vsm_updater/src/: main.rs
