[package]
name = "vsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.18"
clap = { version = "4.4.18", features = ["derive"] }
axum = { version = "0.7.4", features = ["ws", "macros"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
notify = "6.1.1"
lazy_static = "1.4.0"
