[package]
name = "vsm_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
flexbuffers = "2.0.0"
quick-xml = "0.31.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"
minify-html = "0.15.0"
minify = "1.3.0"
pulldown-cmark = "0.10.0"
url = "2.5.0"
chrono = "0.4.34"
words-count = "0.1.6"
flate2 = "1.0.28"
